# fgumi

./: .coderabbit.yaml  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  STATUS.md  THIRDPARTY.toml  codecov.yml  deny.toml  release-plz.toml
crates/fgumi-bam-io/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/fgumi-bam-io/benches/: reorder_buffer.rs
crates/fgumi-bam-io/src/: bam_io.rs  grouping.rs  header.rs  lib.rs  library.rs  mem_estimate.rs  os_hints.rs  paths.rs  prefetch_reader.rs  progress.rs  reader.rs  reorder.rs  sam_input.rs  writer.rs
crates/fgumi-bgzf/: CHANGELOG.md  Cargo.toml
crates/fgumi-bgzf/benches/: stored_block_decode.rs
crates/fgumi-bgzf/src/: lib.rs  reader.rs  writer.rs
crates/fgumi-cli-common/: Cargo.toml
crates/fgumi-cli-common/src/: lib.rs
crates/fgumi-cli-macros/: Cargo.toml
crates/fgumi-cli-macros/src/: lib.rs
crates/fgumi-cli-macros/tests/: smoke.rs
crates/fgumi-consensus/: CHANGELOG.md  Cargo.toml
crates/fgumi-consensus/src/: base_builder.rs  caller.rs  codec_caller.rs  duplex_caller.rs  error.rs  filter.rs  lib.rs  methylation.rs  oracle_test_support.rs  overlapping.rs  phred.rs  sequence.rs  simple_umi.rs  tags.rs  vanilla_caller.rs
crates/fgumi-derive/: Cargo.toml
crates/fgumi-derive/src/: lib.rs
crates/fgumi-derive/tests/: basic.rs
crates/fgumi-dna/: CHANGELOG.md  Cargo.toml
crates/fgumi-dna/src/: bitenc.rs  dna.rs  lib.rs
crates/fgumi-fmt/: Cargo.toml
crates/fgumi-fmt/src/: lib.rs
crates/fgumi-lib/: Cargo.toml
crates/fgumi-lib/src/: bam_io.rs  correct.rs  defaults.rs  errors.rs  grouper.rs  header.rs  lib.rs  logging.rs  mi_group.rs  progress.rs  tag_reversal.rs  template.rs  validation.rs  variant_review.rs
crates/fgumi-lib/src/extract/: mod.rs
crates/fgumi-lib/src/metrics/: mod.rs
crates/fgumi-lib/src/sam/: mod.rs
crates/fgumi-lib/src/simulate/: family_size.rs  insert_size.rs  mod.rs  parallel_gzip_writer.rs  quality.rs  rng.rs
crates/fgumi-lib/src/sort/: external.rs  inline_buffer.rs  mod.rs  pipeline.rs  radix.rs  raw.rs  raw_bam_reader.rs  read_ahead.rs  sink.rs
crates/fgumi-lib/src/umi/: mod.rs  parallel_assigner.rs
crates/fgumi-lib/src/unified_pipeline/: bam.rs  base.rs  fastq.rs  mod.rs  queue.rs  rebalancer.rs
crates/fgumi-metrics/: CHANGELOG.md  Cargo.toml
crates/fgumi-metrics/src/: clip.rs  consensus.rs  correct.rs  downsampling.rs  duplex.rs  float.rs  group.rs  inline_collector.rs  intervals.rs  lib.rs  rejection.rs  shared.rs  simplex.rs  template_info.rs  writer.rs
crates/fgumi-pipeline/: Cargo.toml
crates/fgumi-pipeline-core/: Cargo.toml
crates/fgumi-pipeline-core/src/: builder.rs  erased.rs  finalize.rs  handles.rs  held.rs  lib.rs  outputs.rs  queues.rs  reorder.rs  signal.rs  step.rs  tests.rs  topology.rs
crates/fgumi-pipeline-core/src/runtime/: contexts.rs  detached.rs  drain.rs  driver.rs  fused.rs  live.rs  metrics.rs  mod.rs  pool.rs  sampler.rs  scheduler.rs  stats.rs  storage.rs  worker_core.rs
crates/fgumi-pipeline-core/tests/compile-fail/: chain_input_type_mismatch.rs  chain_input_type_mismatch.stderr  ordered_bytes_single_requires_heapsize.rs  ordered_bytes_single_requires_heapsize.stderr  ordered_bytes_single_requires_ordered.rs  ordered_bytes_single_requires_ordered.stderr
crates/fgumi-pipeline-io/: Cargo.toml
crates/fgumi-pipeline-io/benches/: serial_ingest.rs
crates/fgumi-pipeline-io/src/: boundaries.rs  lib.rs  types.rs
crates/fgumi-pipeline-io/src/sink/: mod.rs  write_bgzf.rs  write_raw.rs
crates/fgumi-pipeline-io/src/sort/: and_spill.rs  arena_ingest.rs  compress_spill.rs  merge.rs  mod.rs  protocol.rs  sort_buffer.rs  spill_block_compress.rs  spill_compress.rs  spill_decompress.rs  spill_gather.rs  spill_write.rs  tests.rs
crates/fgumi-pipeline-io/src/source/: mod.rs  read_bam.rs
crates/fgumi-pipeline/src/: lib.rs  stage.rs
crates/fgumi-pipeline/src/pipeline/: aligner_io.rs  batch_state.rs  builder.rs  health.rs  mod.rs  phase.rs  phase_a.rs  phase_a_graph.rs  phase_a_steps.rs  phase_a_worker.rs  queue.rs  reorder.rs  stats.rs  (+2 more)
crates/fgumi-raw-bam/: CHANGELOG.md  Cargo.toml
crates/fgumi-raw-bam/src/: bin.rs  builder.rs  cigar.rs  fields.rs  indexed_reader.rs  lib.rs  noodles_compat.rs  overlap.rs  raw_bam_record.rs  sequence.rs  sort.rs  tags.rs  testutil.rs
crates/fgumi-raw-bam/tests/: noodles_roundtrip.rs  noodles_roundtrip_comprehensive.rs  tags_editor_invariants.proptest-regressions  tags_editor_invariants.rs
crates/fgumi-sam/: CHANGELOG.md  Cargo.toml
crates/fgumi-sam/src/: alignment_tags.rs  builder.rs  clipper.rs  lib.rs  record_utils.rs  tag.rs  template_coordinate.rs
crates/fgumi-simd-fastq/: CHANGELOG.md  Cargo.toml
crates/fgumi-simd-fastq/benches/: fastq_parsing.rs
crates/fgumi-simd-fastq/src/: bitmask.rs  lexer.rs  lib.rs  parser.rs  reader.rs
crates/fgumi-sort/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
crates/fgumi-sort-cli/: Cargo.toml
crates/fgumi-sort-cli/src/: chains.rs  lib.rs  sort.rs  version.rs
crates/fgumi-sort/benches/: chunk_sorter.rs  queryname_keys.rs
crates/fgumi-sort/examples/: arena_bench.rs
crates/fgumi-sort/src/: arena_pool.rs  bgzf_io.rs  block_offsets.rs  chunk_sorter.rs  codec.rs  external.rs  inline.rs  keys.rs  lib.rs  loser_tree.rs  memory_probe.rs  merge_slots.rs  pipeline.rs  pooled_bam_writer.rs  pooled_chunk_writer.rs  radix.rs  read_ahead.rs  reader.rs  ref_sort.rs  segmented_buf.rs  spill_block.rs  spill_block_reader.rs  sync_spill_writer.rs  template_arena.rs  tmp_dir_alloc.rs  verify.rs  worker_pool.rs  zspill_stream.rs
crates/fgumi-sort/tests/: loom_merge_slots.rs  read_ahead_integration.rs  verify_integration.rs
crates/fgumi-tag/: CHANGELOG.md  Cargo.toml
crates/fgumi-tag/src/: lib.rs  tag.rs
crates/fgumi-umi/: CHANGELOG.md  Cargo.toml
crates/fgumi-umi/src/: assigner.rs  error.rs  index_threshold.rs  lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: check_tag_literals.rs  generate_docs.rs  generate_metrics.rs  generate_summary.rs  generate_tools.rs  main.rs
(+588 files in other folders)
