[workspace]
members = [".", "crates/fgumi-derive", "crates/fgumi-raw-bam", "crates/fgumi-dna", "crates/fgumi-bgzf", "crates/fgumi-metrics", "crates/fgumi-sam", "crates/fgumi-simd-fastq", "crates/fgumi-tag", "crates/fgumi-umi", "crates/fgumi-consensus", "crates/xtask"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.87.0"
repository = "https://github.com/fulcrumgenomics/fgumi"
license = "MIT"

[workspace.dependencies]
fgumi-derive = { version = "0.2.0", path = "crates/fgumi-derive" }
fgumi-bgzf = { version = "0.2.0", path = "crates/fgumi-bgzf" }
fgumi-consensus = { version = "0.2.0", path = "crates/fgumi-consensus", default-features = false }
fgumi-dna = { version = "0.2.0", path = "crates/fgumi-dna" }
fgumi-metrics = { version = "0.2.0", path = "crates/fgumi-metrics" }
fgumi-raw-bam = { version = "0.2.0", path = "crates/fgumi-raw-bam" }
fgumi-sam = { version = "0.2.0", path = "crates/fgumi-sam" }
fgumi-simd-fastq = { version = "0.2.0", path = "crates/fgumi-simd-fastq" }
fgumi-tag = { version = "0.2.0", path = "crates/fgumi-tag" }
fgumi-umi = { version = "0.2.0", path = "crates/fgumi-umi" }
anyhow = "1.0.102"
bytemuck = { version = "1.14", features = ["derive"] }
clap = { version = "4", features = ["derive", "string"] }
murmur3 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wide = "1.3"

[package]
name = "fgumi"
version.workspace = true
authors = ["Nils Homer <nils@fulcrumgenomics.com>", "Tim Fennell <tim@fulcrumgenomics.com>"]
description = "High-performance tools for UMI-tagged sequencing data: extraction, grouping, and consensus calling"
repository.workspace = true
homepage = "https://github.com/fulcrumgenomics/fgumi"
documentation = "https://docs.rs/fgumi"
readme = "README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "umi", "consensus", "sequencing", "ngs"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "2"
noodles = { version = "0.106.0", features = ["bam", "fasta", "sam", "bgzf", "core", "vcf"] }
noodles-bgzf = { version = "0.46.0", features = ["libdeflate"] }
mimalloc = { version = "0.1.48", default-features = false }
libmimalloc-sys = { version = "0.1.44", features = ["extended"] }
enum_dispatch = "0.3.13"
anyhow = { workspace = true }
read-structure = "0.2.0"
bstr = "1.12.1"
bytes = "1"
fgoxide = "0.6.0"
tempfile = "3.3.0"
lru = "0.16.3"
crc32fast = "1.4"
ctrlc = { version = "3.4", features = ["termination"] }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8.21"
parking_lot = "0.12"
libdeflater = "1.22"
serde = { version = "1.0.228", features = ["derive"] }
itertools = "0.14.0"
indexmap = "2"
rand = "0.10"
csv = "1.1"
memchr = "2"
murmur3 = { workspace = true }
statrs = "0.18"
bytesize = "2.3"
sysinfo = { version = "0.38", default-features = false, features = ["system"] } # unconditionally used by validate_against_system_memory
fs4 = { version = "0.13", default-features = false, features = ["sync"] } # cross-platform filesystem free-space queries
num_cpus = "1.16"
rayon = "1.10"
approx = "0.5.1"
ahash = "0.8"
bytemuck = { workspace = true }
noodles-csi = "0.54.0"
bgzf = "0.3.0"
wide = { workspace = true }
rand_distr = "0.6"
flate2 = "1.1"
dhat = { version = "0.3", optional = true }
fgumi-derive = { workspace = true }
fgumi-raw-bam = { workspace = true, features = ["noodles"] }
fgumi-dna = { workspace = true }
fgumi-bgzf = { workspace = true }
fgumi-metrics = { workspace = true }
fgumi-sam = { workspace = true }
fgumi-simd-fastq = { workspace = true }
fgumi-umi = { workspace = true }
fgumi-consensus = { workspace = true }
which = "7"
indicatif = { version = "0.18", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", default-features = false, features = ["fs"] }

[features]
default = ["simplex", "duplex", "codec"]
simplex = ["fgumi-consensus/simplex"]
# duplex and codec depend on simplex (mirrors fgumi-consensus: `duplex = ["simplex"]`
# and `codec = ["simplex"]`), and their commands share methylation/filter paths
# that live behind the `simplex` feature in this crate.
duplex = ["simplex", "fgumi-consensus/duplex"]
codec = ["simplex", "fgumi-consensus/codec"]
dhat-heap = ["dep:dhat"]
# Enable comprehensive memory debugging infrastructure (monitor thread, hot-path atomics, CLI args)
memory-debug = []
# Enable compare subcommand with bams and metrics (developer tools)
compare = []
# Enable simulate commands for generating synthetic test data
simulate = ["simplex"]
# Enable profiling output for adjacency UMI assigner
profile-adjacency = []
# Enable long-running concurrency stress tests (behind a feature gate so normal
# `cargo test` doesn't run them — use `cargo nextest run --features stress-tests`).
stress-tests = []
# `runall` only: have AlignAndMerge reorder its input into canonical
# ordinal order before feeding the aligner. The default code path forwards
# batches in upstream worker-scheduling order, which is fine for real
# aligners that preserve input order in their output (e.g. bwa mem). This
# feature exists for benchmark harnesses (e.g. fgumi-benchmarks's
# replay-aligner.sh) whose SAM output is sourced independently of stdin —
# those harnesses need the FASTQ written to the aligner in canonical order
# so both sides of the zipper merge are in the same order. Off by default
# because the reorder buffer holds up to `in-flight-batches` of unmapped
# bytes on top of the upstream `StageQueue`'s accounting, which is a
# memory cost most workloads don't need.
runall-reorder-aligner-input = []

[dev-dependencies]
rstest = "0"
proptest = "1.10"
criterion = { version = "0.8", features = ["html_reports"] }
fgumi-raw-bam = { workspace = true, features = ["test-utils", "noodles"] }
noodles = { version = "0.106.0", features = ["bam", "sam"] }
insta = { version = "1", features = ["filters"] }
libc = "0.2"

[[bench]]
name = "core_functions"
harness = false
# Exercises vanilla consensus / overlap helpers that live behind `simplex`.
required-features = ["simplex"]

[[bench]]
name = "raw_bam_accessors"
harness = false

[[bench]]
name = "raw_bam_tags_editor"
harness = false

[[bench]]
name = "raw_bam_length_changing"
harness = false

[[bench]]
name = "raw_bam_vs_recordbuf"
harness = false

[[bench]]
name = "raw_bam"
harness = false

[[bench]]
name = "reorder_buffer"
harness = false

[build-dependencies]
built = { version = "0", features = ["git2", "chrono"] }

[profile.release]
#lto = true
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = "line-tables-only"

[lib]
name = "fgumi_lib"
path = "src/lib/mod.rs"
