[package]
name = "fgumi-bam-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "BAM I/O factories and pipeline primitives for the fgumi family of crates"
repository.workspace = true
license.workspace = true
readme = "README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "bam", "sequencing", "ngs"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[dependencies]
fgumi-raw-bam = { workspace = true, features = ["noodles"] }
noodles = { workspace = true, features = ["bam", "fasta", "sam", "bgzf", "core", "vcf"] }
noodles-bgzf = { workspace = true }
noodles-csi = { workspace = true }
bgzf = { workspace = true }
anyhow = { workspace = true }
bstr = { workspace = true }
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
