[package]
name = "fgumi-bgzf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "BGZF block reading, decompression, and compression utilities"
repository.workspace = true
license.workspace = true

[dependencies]
libdeflater = "1.22"
crc32fast = "1.4"
bgzf = "0.3.0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
