[package]
name = "fgumi-bgzf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "BGZF block reading, decompression, and compression utilities"
repository.workspace = true
license.workspace = true

[dependencies]
libdeflater = { workspace = true }
crc32fast = { workspace = true }
bgzf = { workspace = true }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
