[package]
name = "fgumi-bgzf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "BGZF block reading, decompression, and compression utilities"
repository.workspace = true
license.workspace = true

[dependencies]
libdeflater = "1.22"
crc32fast = "1.4"
bgzf = "0.4.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "stored_block_decode"
harness = false

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
