[package]
name = "fgumi-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Consensus calling algorithms for fgumi: simplex, duplex, and CODEC"
repository.workspace = true
license.workspace = true

[dependencies]
ahash = "0.8"
anyhow = "1.0"
approx = "0.5"
bstr = "1.12.1"
log = "0"
noodles = { version = "0.109.0", features = ["bam", "sam", "core"] }
rand = "0.10"
wide = "1.3"
fgumi-dna = { workspace = true }
fgumi-sam = { workspace = true }
fgumi-metrics = { workspace = true }
fgumi-raw-bam = { workspace = true, features = ["noodles"] }

[dev-dependencies]
fgumi-raw-bam = { workspace = true, features = ["test-utils"] }

[features]
default = ["simplex", "duplex", "codec"]
simplex = []
duplex = ["simplex"]
codec = ["simplex"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
