[package]
name = "fgumi-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Consensus calling algorithms for fgumi: simplex, duplex, and CODEC"
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
approx = { workspace = true }
bstr = { workspace = true }
log = { workspace = true }
noodles = { workspace = true, features = ["bam", "sam", "core"] }
rand = { workspace = true }
thiserror = { workspace = true }
wide = { workspace = true }
fgumi-dna = { workspace = true }
fgumi-sam = { workspace = true }
fgumi-metrics = { workspace = true }
fgumi-raw-bam = { workspace = true, features = ["noodles"] }

[dev-dependencies]
fgumi-raw-bam = { workspace = true, features = ["test-utils"] }
# Read fgbio-oracle fixture BAMs back into RawRecords in the saturation-oracle
# tests. fgumi-bam-io does NOT depend on fgumi-consensus, so this is cycle-free.
fgumi-bam-io = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }

[features]
default = ["simplex", "duplex", "codec"]
simplex = []
duplex = ["simplex"]
codec = ["simplex"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
