[package]
name = "fgumi-dna"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
description = "DNA sequence utilities: complement, reverse-complement, 2-bit encoding"
repository = "https://github.com/fulcrumgenomics/fgumi"
license = "MIT"

[dependencies]

[dev-dependencies]
rstest = "0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
