[package]
name = "fgumi-dna"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "DNA sequence utilities: complement, reverse-complement, 2-bit encoding"
repository.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
rstest = "0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
