[package]
name = "fgumi-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for fgumi UMI processing"

[lib]
name = "fgumi_lib"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bgzf = { workspace = true }
bstr = { workspace = true }
bytemuck = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
flate2 = { workspace = true }
libdeflater = { workspace = true }
libmimalloc-sys = { workspace = true, optional = true }
log = { workspace = true }
lru = { workspace = true }
memchr = { workspace = true }
noodles = { workspace = true, features = ["bam", "fasta", "sam", "bgzf", "core", "vcf"] }
noodles-bgzf = { workspace = true }
noodles-csi = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
read-structure = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true, optional = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
fgumi-raw-bam = { workspace = true, features = ["noodles"] }
fgumi-dna = { workspace = true }
fgumi-bgzf = { workspace = true }
fgumi-metrics = { workspace = true }
fgumi-sam = { workspace = true }
fgumi-simd-fastq = { workspace = true }
fgumi-umi = { workspace = true }
fgumi-consensus = { workspace = true }

[features]
default = ["simplex", "duplex", "codec"]
simplex = ["fgumi-consensus/simplex"]
duplex = ["fgumi-consensus/duplex"]
codec = ["fgumi-consensus/codec"]
# Enable comprehensive memory debugging infrastructure (monitor thread, hot-path atomics, CLI args)
memory-debug = ["dep:libmimalloc-sys", "dep:sysinfo"]
# Enable compare subcommand with bams and metrics (developer tools)
compare = []
# Enable simulate commands for generating synthetic test data
simulate = []
# Enable profiling output for adjacency UMI assigner
profile-adjacency = []
# Enable slow stress tests for concurrency testing
stress-tests = []

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
fgumi-raw-bam = { workspace = true, features = ["test-utils"] }
