[package]
name = "fgumi-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Structured metric types and TSV writer for fgumi operations"
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
fgoxide = { workspace = true }
noodles = { workspace = true, features = ["sam"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
fgumi-sam = { workspace = true }

[features]
default = ["clip"]
clip = ["dep:noodles"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
