[package]
name = "fgumi-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Structured metric types and TSV writer for fgumi operations"
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
fgoxide = "0.6.0"
murmur3 = { workspace = true }
noodles = { version = "0.106.0", features = ["sam"] }
fgumi-raw-bam = { workspace = true }

[dev-dependencies]
tempfile = "3.3.0"
fgumi-sam = { workspace = true }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
