[package]
name = "fgumi-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Structured metric types and TSV writer for fgumi operations"
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
fgoxide = { workspace = true }
tempfile = { workspace = true }
noodles = { workspace = true, features = ["sam"], optional = true }
fgumi-raw-bam = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
fgumi-sam = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
strum = { version = "0.28", features = ["derive"] }

[features]
default = ["clip"]
clip = ["dep:noodles", "dep:fgumi-raw-bam"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
